tests/machine/x/cobol/let_and_print.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. LET-AND-PRINT.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 A PIC 9 VALUE 10.
       01 B PIC 99 VALUE 20.
       01 SUM PIC 99.
       PROCEDURE DIVISION.
           COMPUTE SUM = A + B
           DISPLAY SUM
           STOP RUN.
